--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/bell": "^12.2.0",
     "@hapi/boom": "^9.1.1",
     "@hapi/cookie": "^11.0.2",
     "@hapi/hapi": "^20.1.0",
     "@hapi/inert": "^6.0.3",
     "@hapi/joi": "^17.1.1",
     "@hapi/vision": "^6.0.1",
+    "bcrypt": "^5.0.1",
     "dotenv": "^8.2.0",
     "handlebars": "^4.7.6",
     "lodash": "^4.17.21",
     "mais-mongoose-seeder": "^1.0.7",
-    "mongoose": "^5.11.15"
+    "mongoose": "^5.11.15",
+    "sanitize": "^2.1.0"
   },
   "devDependencies": {
     "axios": "^0.21.1",
