--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "lodash": "^4.17.21",
     "mais-mongoose-seeder": "^1.0.7",
     "mongoose": "^5.11.15",
-    "sanitize": "^2.1.0"
+    "sanitize": "^2.1.0",
+    "sanitize-html": "^2.3.3"
   },
   "devDependencies": {
     "axios": "^0.21.1",
